[package]
name = "cass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", features = ["json", "macros", "headers", "ws", "matched-path", "tokio"] }
scylla = { version = "0.8.0", features = ["ssl", "secret"] }
reqwest = { version = "0.11.14", features = ["json"] }
async-std = "1.12.0"
uuid = "1.3.1"
serde_json = "1.0.95"
serde = { version = "1.0.152", features = ["derive"] }
tracing = "0.1.37"
tokio = { version = "1.27.0", features = ["rt-multi-thread"] }
# rust_socketio = "0.4.1"
# openssl = "0.10.50"
