[package]
name = "cass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
scylla = { version = "0.8.0", features = ["ssl", "secret"] }
reqwest = { version = "0.11.14", features = ["json"] }
uuid = "1.3.1"
serde_json = "1.0.95"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.27.0", features = ["rt-multi-thread"] }
futures = "0.3.28"
# openssl = "0.10.50"
